[gd_scene load_steps=4 format=2]

[ext_resource path="res://_core/actors/inventories/inventory.gd" type="Script" id=1]
[ext_resource path="res://_core/actors/inventories/moduleInventory.gd" type="Script" id=2]
[ext_resource path="res://_core/actors/inventories/crewInventory.gd" type="Script" id=3]

[node name="inventory" type="Node"]
script = ExtResource( 1 )

[node name="moduleInventory" type="Node" parent="."]
script = ExtResource( 2 )

[node name="cargoInventory" type="Node" parent="."]

[node name="crewInventory" type="Node" parent="."]
script = ExtResource( 3 )
